--- a/index.html
+++ b/index.html
@@ -776,7 +776,8 @@ summary::-webkit-details-marker {
   <div class="container">
     <nav class="navbar">
         <div class="logo">
-            <img src="assets/logo.png" alt="Spacece Logo">
+            <img src="
+      assets/logo.png" alt="Spacece Logo">
         </div>
 
         <ul class="nav-links">
@@ -787,9 +788,12 @@ summary::-webkit-details-marker {
             <li class="dropdown">
                 <a href="#">Programs <i class="fa-solid fa-angle-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="Programs/start_your_school.html">Start Your School</a></li>
-                    <li><a href="Programs/upgrade_your_school.html">Upgrade Your School</a></li>
-                    <li><a href="Programs/parents_toddler_program.html">Parents & Toddler Program</a></li>
+                    <li><a href="
+                Programs/start_your_school.html">Start Your School</a></li>
+                    <li><a href="
+                Programs/upgrade_your_school.html">Upgrade Your School</a></li>
+                    <li><a href="
+                Programs/parents_toddler_program.html">Parents & Toddler Program</a></li>
                 </ul>
             </li>
 
@@ -805,9 +809,12 @@ summary::-webkit-details-marker {
             <li class="dropdown">
                 <a href="Aboutus.html">About Us <i class="fa-solid fa-angle-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="Aboutus/Contactus.html">Contact Us</a></li>
-                    <li><a href="Aboutus/Our_vision.html">Our Vision & Mission</a></li>
-                    <li><a href="Aboutus/Our_Team.html">Our Team</a></li>
+                    <li><a href="
+                Aboutus/Contactus.html">Contact Us</a></li>
+                    <li><a href="
+                Aboutus/Our_vision.html">Our Vision & Mission</a></li>
+                    <li><a href="
+                Aboutus/Our_Team.html">Our Team</a></li>
                 </ul>
             </li>
 
@@ -815,8 +822,10 @@ summary::-webkit-details-marker {
             <li class="dropdown">
                 <a href="Resources.html">Resources <i class="fa-solid fa-angle-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="Resources/Blogs.html">Blogs</a></li>
-                    <li><a href="Resources/Parent_guides.html">Parent Guides</a></li>
+                    <li><a href="
+                Resources/Blogs.html">Blogs</a></li>
+                    <li><a href="
+                Resources/Parent_guides.html">Parent Guides</a></li>
                 </ul>
             </li>
 
@@ -904,7 +913,8 @@ summary::-webkit-details-marker {
         <button class="close-btn">×</button>
 
         <div class="slider_logo">
-            <img src="assets/logo.png" alt="Spacece Logo">
+            <img src="
+      assets/logo.png" alt="Spacece Logo">
         </div>
         <ul class="slider_menu nav-links">
 
@@ -914,9 +924,12 @@ summary::-webkit-details-marker {
             <li class="slider_menu dropdown">
                 <a href="#">Programs <i class="fa-solid fa-angle-right"></i></a>
                 <ul class="slider_menu dropdown-menu">
-                    <li><a href="Programs/start_your_school.html">Start Your School</a></li>
-                    <li><a href="Programs/upgrade_your_school.html">Upgrade Your School</a></li>
-                    <li><a href="Programs/parents_toddler_program.html">Parents & Toddler Program</a></li>
+                    <li><a href="
+                Programs/start_your_school.html">Start Your School</a></li>
+                    <li><a href="
+                Programs/upgrade_your_school.html">Upgrade Your School</a></li>
+                    <li><a href="
+                Programs/parents_toddler_program.html">Parents & Toddler Program</a></li>
                 </ul>
             </li>
 
@@ -930,11 +943,15 @@ summary::-webkit-details-marker {
 
             <!-- About Us -->
             <li class="sliderbar_menu dropdown">
-                <a href="Aboutus/Aboutus.html">About Us <i class="fa-solid fa-angle-right"></i></a>
+                <a href="
+          Aboutus/Aboutus.html">About Us <i class="fa-solid fa-angle-right"></i></a>
                 <ul class="sliderbar_menu dropdown-menu">
-                    <li><a href="Aboutus/Contactus.html">Contact Us</a></li>
-                    <li><a href="Aboutus/Our_vision.html">Our Vision & Mission</a></li>
-                    <li><a href="Aboutus/Our_Team.html">Our Team</a></li>
+                    <li><a href="
+                Aboutus/Contactus.html">Contact Us</a></li>
+                    <li><a href="
+                Aboutus/Our_vision.html">Our Vision & Mission</a></li>
+                    <li><a href="
+                Aboutus/Our_Team.html">Our Team</a></li>
                 </ul>
             </li>
 
@@ -942,8 +959,10 @@ summary::-webkit-details-marker {
             <li class="sliderbar_menu dropdown">
                 <a href="#">Resources <i class="fa-solid fa-angle-right"></i></a>
                 <ul class="sliderbar_menu dropdown-menu">
-                    <li><a href="Resources/Blogs.html">Blogs</a></li>
-                    <li><a href="Resources/Parent_guides.html">Parent Guides</a></li>
+                    <li><a href="
+                Resources/Blogs.html">Blogs</a></li>
+                    <li><a href="
+                Resources/Parent_guides.html">Parent Guides</a></li>
                 </ul>
             </li>
 
@@ -963,7 +982,8 @@ summary::-webkit-details-marker {
         <a class="enroll-btn" href="javascript:void(0)" onclick="openPopup()">Enroll Now</a>
       </div>
       <div class="pttc-hero-image">
-        <img src="assets/pttc_hero.jpg" alt="PTTC Training Session">
+        <img src="
+  assets/pttc_hero.jpg" alt="PTTC Training Session">
       </div>
     </div>
   </div>
